# Moveo-2

./: .gitignore  README.md
Arduino/Test sketches/Arduino_Nano_Receive_dir_pul/: Arduino_Nano_Receive_dir_pul.code-workspace
Arduino/Test sketches/Minio_arduino/: Minio_arduino.ino
Backups/Iteration_3 working version of loading the controllers/iteration_3/: CMakeLists.txt  package.xml
Backups/Iteration_3 working version of loading the controllers/iteration_3/config/: initial_positions.yaml  iter3_moveo_urdf.ros2_control.xacro  joint_limits.yaml  moveo_urdf.urdf  my_controllers.yaml
Backups/moveo_gazebo/: CMakeLists.txt  package.xml
Ros2 Packages/iteration_1/: CMakeLists.txt  package.xml
Ros2 Packages/iteration_2/: package.xml
Ros2 Packages/iteration_4/: .setup_assistant
Ros2 Packages/moveo2_plugins/: CMakeLists.txt
Ros2 Packages/moveo2_plugins/include/moveo2_plugins/: moveo2_hardware_interface.hpp
Ros2 Packages/moveo2_plugins/src/: moveo2_hardware_interface.cpp
TF4IM (Old Controller)/: AR2_2.0_arduino_sketch.ino  New sketch.ino
arm_try_3/config/: initial_positions.yaml  moveit_controllers.yaml  moveo_urdf.ros2_control.xacro  moveo_urdf.srdf  ros2_controllers.yaml
arm_try_3/launch/: move_group.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
meshes/: Link_2.stl  Link_5.stl
ros2_ws/iteration_1/: CMakeLists.txt
ros2_ws/iteration_2/: .setup_assistant  CMakeLists.txt
ros2_ws/iteration_3/: .setup_assistant
ros2_ws/iteration_4/: CMakeLists.txt  package.xml
ros2_ws/moveo2_plugins/: CMakeLists.txt  package.xml
(+98 files in other folders)
